[gd_scene load_steps=2 format=3 uid="uid://cbist3rdatmmi"]

[ext_resource type="Script" path="res://addons/hyh.cutscene_graph/editor/nodes/EditorActionNode.gd" id="1"]

[node name="EditorActionNode" type="GraphNode"]
offset_right = 416.0
offset_bottom = 121.0
title = "Action"
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(0.94902, 0.27451, 0.478431, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0.811765, 0.956863, 0.298039, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1")

[node name="RootContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="RootContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="Label" type="Label" parent="RootContainer/GridContainer"]
layout_mode = 2
text = "Action:"

[node name="ActionNameEdit" type="LineEdit" parent="RootContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="RootContainer/GridContainer"]
layout_mode = 2
text = "Character:"

[node name="CharacterSelect" type="OptionButton" parent="RootContainer/GridContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="RootContainer/GridContainer"]
layout_mode = 2
text = "Variant:"

[node name="VariantSelect" type="OptionButton" parent="RootContainer/GridContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="RootContainer/GridContainer"]
layout_mode = 2
text = "Argument:"

[node name="ArgumentEdit" type="LineEdit" parent="RootContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="text_changed" from="RootContainer/GridContainer/ActionNameEdit" to="." method="_on_action_name_edit_text_changed"]
[connection signal="item_selected" from="RootContainer/GridContainer/CharacterSelect" to="." method="_on_CharacterSelect_item_selected"]
[connection signal="item_selected" from="RootContainer/GridContainer/VariantSelect" to="." method="_on_variant_select_item_selected"]
[connection signal="text_changed" from="RootContainer/GridContainer/ArgumentEdit" to="." method="_on_argument_edit_text_changed"]
